examples/traffic_routing/service_stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-routing-example-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: traffic-routing-example
    # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 789746c88d
